2007-08-20  Andreas Kupries  <andreask@activestate.com>

	* support/releases/history/README-1.10.txt: README listing the
	  changes for the upcoming release.

2007-07-27  Andreas Kupries  <andreask@activestate.com>

	* support/installation/modules.tcl: New module 'wip' added. A mini
	  interpreter for word lists based on ideas in 'treeql'.

2007-07-17  Andreas Kupries  <andreask@activestate.com>

	* support/installation/modules.tcl: New module 'uev' added, for
	  the generation and handling of user events.

2007-05-04  Andreas Kupries  <andreask@activestate.com>

	* support/installation/modules.tcl: New module 'nns' added, a
	  nano-sized name service based on and for 'comm'. Derived from
	  the nserver code in the Pool_Net bundle of packages.

2007-05-03  Andreas Kupries  <andreask@activestate.com>

	* sak.tcl: Added stronger check for 'package provided' command to
	  'ppackages'. Code in critcl.tcl generated for tcllibc slips past
	  the less strong filters.

2007-03-21  Andreas Kupries  <andreask@activestate.com>

	* Changed all documentation files (*.man). Replaced all deprecated
	  commands and list types with their new canonical names, putting
	  the Tcllib documentation back in line with the current
	  definition of the doctools language and its companions.

2006-11-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* support/installation/version.tcl: Added critcl implementation of
	  struct::graph to the list of critcl supported packages.

2006-11-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* modules/tcllibc.tcl: Silence critcl warnings. Files with no code
	raise a warning message. Add an empty critcl::ccode block to avoid.

2006-10-13  Andreas Kupries  <andreask@activestate.com>

	* modules/tcllibc.tcl: Bumped to version 0.3.1. I believe this has
	  to be bumped whenever one of the contained packages changes, or
	  more packages are added. Keep track of this.

2006-10-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
